name:                reflex-talk-backend
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Ryan Trinkle
maintainer:          ryan.trinkle@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable reflex-talk-backend
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, FlexibleContexts, TemplateHaskell
  build-depends:       base == 4.*
                     , bytestring >=0.10 && <0.11
                     , twitter-types-lens
                     , twitter-conduit
                     , lens
                     , transformers
                     , monad-control
                     , conduit
                     , text
                     , http-conduit
                     , authenticate-oauth
                     , resourcet
                     , data-default
                     , snap-server
                     , websockets
                     , websockets-snap
  hs-source-dirs:      src
  default-language:    Haskell2010
