cabal-version: 2.2
name: common
version: 0.1
build-type: Simple

common common
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -- Showing valid hole fits is too slow
    -fno-show-valid-hole-fits
    -- Missing fields in records is almost always a bug
    -Werror=missing-fields
    -Wall

flag debug-show
  description: Better error messages at the cost of requiring a bunch of show instances
  manual: True
  default: False

library
  import: common
  default-language: Haskell2010
  hs-source-dirs: src
  if !flag(debug-show)
     cpp-options: -DNDEBUG_SHOW
  build-depends: base
               , QuickCheck
               , aeson
               , aeson-gadt-th
               , aeson-gadt-th
               , base64-bytestring
               , beam-core
               , bytestring
               , bytestring
               , constraints
               , constraints-extras
               , containers
               , dejafu
               , dependent-map
               , dependent-monoidal-map
               , dependent-sum
               , dependent-sum-aeson-orphans
               , dependent-sum-template
               , either
               , generic-deriving
               , groom
               , iv-common
               , lens
               , microlens
               , monad-loops
               , monoidal-containers
               , mtl
               , obelisk-aeson-orphans
               , obelisk-route
               , patch
               , ref-tf
               , reflex
               , semialign
               , stm
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , template-haskell
               , text
               , th-abstraction
               , these
               , these-lens
               , time
               , transformers
               , validation
               , vessel
               , witherable
  exposed-modules:
    Common.Api
    Common.Route
    Common.Schema
